# Decision-tree

./: .gitignore  CMakeLists.txt  DecisionTreeMain  README.md
data/data_clean/: cleaned_sample_100_rows.csv  cleaned_sample_400_rows.csv
include/app/: BaggingApp.hpp  MPIBaggingApp.hpp  SingleTreeApp.hpp
include/boosting/app/: RegressionBoostingApp.hpp
include/boosting/dart/: IDartStrategy.hpp  UniformDartStrategy.hpp
include/boosting/loss/: AbsoluteLoss.hpp  HuberLoss.hpp  IRegressionLoss.hpp  QuantileLoss.hpp  SquaredLoss.hpp
include/boosting/model/: RegressionBoostingModel.hpp
include/boosting/strategy/: GradientRegressionStrategy.hpp
include/boosting/trainer/: GBRTTrainer.hpp
include/criterion/: HuberCriterion.hpp  LogCoshCriterion.hpp  MAECriterion.hpp  MSECriterion.hpp  PoissonCriterion.hpp  QuantileCriterion.hpp
include/ensemble/: BaggingTrainer.hpp
include/finder/: AdaptiveEQFinder.hpp  AdaptiveEWFinder.hpp  ExhaustiveSplitFinder.hpp  HistogramEQFinder.hpp  HistogramEWFinder.hpp  QuartileSplitFinder.hpp  RandomSplitFinder.hpp
include/functions/io/: DataIO.hpp
include/histogram/: PrecomputedHistograms.hpp
include/lightgbm/app/: LightGBMApp.hpp
include/lightgbm/core/: LightGBMConfig.hpp
include/lightgbm/feature/: FeatureBundler.hpp
include/lightgbm/model/: LightGBMModel.hpp
include/lightgbm/sampling/: GOSSSampler.hpp
include/lightgbm/trainer/: LightGBMTrainer.hpp
include/lightgbm/tree/: LeafwiseTreeBuilder.hpp
include/pipeline/: DataSplit.hpp
include/preprocessing/: DataCleaner.hpp
include/pruner/: CostComplexityPruner.hpp  MinGainPrePruner.hpp  NoPruner.hpp  ReducedErrorPruner.hpp
include/tree/: IPruner.hpp  ISplitCriterion.hpp  ISplitFinder.hpp  ITreeTrainer.hpp  Node.hpp
include/tree/trainer/: SingleTreeTrainer.hpp
include/xgboost/app/: XGBoostApp.hpp
include/xgboost/core/: XGBoostConfig.hpp
include/xgboost/criterion/: XGBoostCriterion.hpp
include/xgboost/finder/: XGBoostSplitFinder.hpp
include/xgboost/loss/: XGBoostLossFactory.hpp
include/xgboost/model/: XGBoostModel.hpp
include/xgboost/trainer/: XGBoostTrainer.hpp
main/: CMakeLists.txt
main/bagging/: main.cpp
main/data_clean/: main.cpp
main/gbrt/: main.cpp
main/mpi_bagging/: CMakeLists.txt  main.cpp
main/single_tree/: main.cpp
main/xgboost/: main.cpp
results_finder/: finder_exhaustive.txt
script/: env_config.sh
script/bagging/: bagging_comparison.sh  exhaustive_results.txt  parallel_performance_results.txt  random_results.txt  strong_scaling_comparison.csv  strong_scaling_comparison.sh  strong_scaling_mpi_results.csv  strong_scaling_openmp_results.csv  test_bagging_parallel.sh  test_bagging_strong_scaling.sh  test_bagging_weak_scaling.sh  weak_mpi.csv  weak_openmp.csv  weak_scaling_comparison.csv  weak_scaling_comparison.sh  weak_scaling_mpi_results.csv  weak_scaling_openmp_results.csv  weak_scaling_summary.csv
script/boosting/: boosting_comparison_results_fixed.txt  compare_boosting_methods.sh
script/boosting/gbrt/: dart_test_results.txt  test_dart_optimized.sh  test_gbrt_comprehensive.sh  test_gbrt_dart_comprehensive.sh  test_gbrt_parallel.sh  test_gbrt_single.sh  test_gbrt_strong_scaling.sh  test_gbrt_weak_scaling.sh
script/boosting/gbrt_dart/: test_gbrt_dart_parallel.sh  test_gbrt_dart_single.sh  test_gbrt_dart_strong_scaling.sh  test_gbrt_dart_weak_scaling.sh
script/boosting/lightgbm/: lightgbm_comprehensive_results.txt  test_lightgbm_comprehensive.sh  test_lightgbm_parallel.sh  test_lightgbm_single.sh  test_lightgbm_strong_scaling.sh  test_lightgbm_weak_scaling.sh  test_try.sh
script/boosting/xgboost/: test_xgboost_comprehensive.sh  test_xgboost_parallel.sh  test_xgboost_single.sh  test_xgboost_strong_scaling.sh  test_xgboost_weak_scaling.sh  xgboost_comprehensive_results.txt
script/mpi_bagging/: test_mpi_bagging_strong_scaling.sh  test_mpi_bagging_weak_scaling.sh
script/single_tree/: results_summary.txt  test_criterion.sh  test_finder.sh  test_pruner.sh  test_singletree_single.sh  test_singletree_strong_scaling.sh  test_singletree_weak_scaling.sh
script/single_tree/results_criterion/: criterion_huber.txt  criterion_logcosh.txt  criterion_mae.txt  criterion_mse.txt  criterion_poisson.txt  criterion_quantile_0_25.txt  criterion_quantile_0_5.txt  criterion_quantile_0_75.txt
script/single_tree/results_finder/: finder_adaptive_eq.txt  finder_adaptive_ew_rice.txt  finder_adaptive_ew_sturges.txt  finder_exhaustive.txt  finder_histogram_eq_32.txt  finder_histogram_eq_64.txt  (+5 more)
src/: CMakeLists.txt  lightgbm_main.cpp  main.cpp
src/app/: BaggingApp.cpp  CMakeLists.txt  MPIBaggingApp.cpp  SingleTreeApp.cpp
src/boosting/: CMakeLists.txt
src/boosting/app/: RegressionBoostingApp.cpp
src/boosting/dart/: UniformDartStrategy.cpp
src/boosting/loss/: IRegressionLoss.cpp
src/boosting/strategy/: GradientRegressionStrategy.cpp
src/boosting/trainer/: GBRTTrainer.cpp
src/functions/io/: CMakeLists.txt  DataIO.cpp
src/histogram/: CMakeLists.txt  PrecomputedHistograms.cpp
src/lightgbm/app/: LightGBMApp.cpp
src/lightgbm/feature/: FeatureBundler.cpp
src/lightgbm/sampling/: GOSSSampler.cpp
src/lightgbm/trainer/: LightGBMTrainer.cpp
src/lightgbm/tree/: LeafwiseTreeBuilder.cpp
src/pipeline/: CMakeLists.txt  DataSplit.cpp
src/preprocessing/: CMakeLists.txt  DataCleaner.cpp
src/tree/: CMakeLists.txt
src/tree/criterion/: HuberCriterion.cpp  LogCoshCriterion.cpp  MAECriterion.cpp  MSECriterion.cpp  PoissonCriterion.cpp  QuantileCriterion.cpp
src/tree/ensemble/: BaggingTrainer.cpp
src/tree/finder/: AdaptiveEQFinder.cpp  AdaptiveEWFinder.cpp  ExhaustiveSplitFinder.cpp  HistogramEQFinder.cpp  HistogramEWFinder.cpp  QuartileSplitFinder.cpp  RandomSplitFinder.cpp
src/tree/pruner/: CostComplexityPruner.cpp  MinGainPrePruner.cpp  NoPruner.cpp  ReducedErrorPruner.cpp
src/tree/trainer/: SingleTreeTrainer.cpp
src/xgboost/: CMakeLists.txt
src/xgboost/app/: XGBoostApp.cpp
src/xgboost/finder/: XGBoostSplitFinder.cpp
src/xgboost/loss/: XGBoostLossFactory.cpp
src/xgboost/trainer/: XGBoostTrainer.cpp
(+13 files in other folders)
